tests/Checker/everything/errors/4b.vc
int main() {
    void a[5];
    return 1;
}
